# tflite-demo

./: CMakeLists.txt  Opencv-Cmake.txt  build.sh  build_linux_arm64.sh  tflite-demo-list.cpp  tflite-demo.cpp  tflite-inference-list.py  tflite-inference.py
